--- a/catalog/view/theme/bt_medicalhealth/stylesheet/stylesheet.css
+++ b/catalog/view/theme/bt_medicalhealth/stylesheet/stylesheet.css
@@ -24,13 +24,13 @@ h1 {
 }
 
 #container div.sixteen.columns.alpha.omega h1 {
-	padding-left: 25px;
+    padding-left: 25px;
 }
 
 h1, .welcome {
-	margin-top: 0;
-	margin-right: 0;
-	margin-bottom: 16px;
+    margin-top: 0;
+    margin-right: 0;
+    margin-bottom: 16px;
 }
 h2 {
     color: #424141;
@@ -54,8 +54,8 @@ a img {
 }
 
 .banner_product a img {
-	margin-bottom: 30px;
-	width: 100%;
+    margin-bottom: 30px;
+    width: 100%;
 }
 
 .banner_product {
@@ -66,13 +66,13 @@ form {
 }
 
 #content form.register table.form tbody tr td table tbody tr td table tbody tr th {
-	float: left;
-	margin-top: 25px;
-	font-family:"MyriadProBold"; font-size:14px; font-weight:400; text-transform:uppercase; color:#20201f;margin-left: 2px;
+    float: left;
+    margin-top: 25px;
+    font-family:"MyriadProBold"; font-size:14px; font-weight:400; text-transform:uppercase; color:#20201f;margin-left: 2px;
 }
 
 p.text_register {
-	margin-left: 25px;
+    margin-left: 25px;
 }
 
 input[type="text"], input[type="password"] {
@@ -99,44 +99,44 @@ select {
     color: #868585;
     font-size: 11px;
     padding: 4px 2px;
-	margin-top: 5px;
+    margin-top: 5px;
 }
 label {
     cursor: pointer;
 }
 
 ul.box-filter {
-	font-size: 11px;
-	text-transform: none;
-	color: #868585;
+    font-size: 11px;
+    text-transform: none;
+    color: #868585;
 }
 
 a#button-filter.button {
-	background-color: #95bd55;
-	color: #ffffff;
-	text-decoration: none;
-	padding: 5px;
-	float: left;
-	margin-bottom: 50px;
+    background-color: #95bd55;
+    color: #ffffff;
+    text-decoration: none;
+    padding: 5px;
+    float: left;
+    margin-bottom: 50px;
 }
 
 span#filter-group3 {
-	text-transform: uppercase;
-	font-size: 13px;
-	font-weight: bold;
+    text-transform: uppercase;
+    font-size: 13px;
+    font-weight: bold;
 }
 
 #column-left div.main-column-left div.box div.box-content ul.box-filter li ul {
-	margin-top: 10px;
-	margin-bottom: 10px;
+    margin-top: 10px;
+    margin-bottom: 10px;
 }
 
 p {
     line-height: 16px;
     margin-bottom: 10px;
-	text-transform: none;
-	font-weight: normal;
-	font-style: normal;
+    text-transform: none;
+    font-weight: normal;
+    font-style: normal;
 }
 
 
@@ -167,68 +167,68 @@ p {
 #content {
     margin-bottom: 25px;
     min-height: 400px;
-	padding-right: 25px;
-	padding-left: 25px;
+    padding-right: 25px;
+    padding-left: 25px;
 }
 
 #curso {
-	width: 50%;
-margin-bottom: 50px;
-	height: 100%;
-	float: left;
-	clear: left;
-	margin-left: 25px;
+    width: 50%;
+    margin-bottom: 50px;
+    height: 100%;
+    float: left;
+    clear: left;
+    margin-left: 25px;
 }
 
 #curso h1 {
-	margin-left: 0;
+    margin-left: 0;
 }
 
 #curso h1 a {
-	width: 50%;
-	color: #95bd55;
+    width: 50%;
+    color: #95bd55;
 }
 
 #curso h2 {
-	color: #dd2c2c;
+    color: #dd2c2c;
 }
 
 div.ministrador {
-	margin-bottom: 15px;
+    margin-bottom: 15px;
 }
 
 #curso h1 img {
-	padding: 15px;
-	border: 1px solid #aeaeae;
-	float: right;
+    padding: 15px;
+    border: 1px solid #aeaeae;
+    float: right;
 }
 
 .pdf a {
-	text-decoration: none;
-	background: url(/image/data/curso/pdf.gif) 0 top no-repeat;
-	height: 25px;
-	padding-top: 5px;
-	padding-bottom: 0px;
-	text-shadow: 0 0 1px;
-	padding-left: 25px;
+    text-decoration: none;
+    background: url(/image/data/curso/pdf.gif) 0 top no-repeat;
+    height: 25px;
+    padding-top: 5px;
+    padding-bottom: 0px;
+    text-shadow: 0 0 1px;
+    padding-left: 25px;
 }
 
 #curso h3 div.pdf a:hover {
-	color: #990000;
-	text-decoration: none;
-	page-break-after: right;
-	background-image: url(/image/data/curso/pdf_off.gif);
-	background-repeat: no-repeat;
-	background-position: left top;
+    color: #990000;
+    text-decoration: none;
+    page-break-after: right;
+    background-image: url(/image/data/curso/pdf_off.gif);
+    background-repeat: no-repeat;
+    background-position: left top;
 }
 
 
 
 #cursomain {
-	clear: left;
-	float: left;
-	height: 100%;
-	width: 100%;
+    clear: left;
+    float: left;
+    height: 100%;
+    width: 100%;
 }
 
 #content.search_form{
@@ -283,10 +283,10 @@ div.ministrador {
 }
 .live-chat {
     background: url("../image/live_chat.jpg") no-repeat scroll left 5px transparent;
-	margin-top: 34px;
+    margin-top: 34px;
     padding-left: 30px;
     line-height: 18px;
-	float: right;
+    float: right;
 }
 .live-chat h1 {
     color: #424141;
@@ -295,7 +295,7 @@ div.ministrador {
     font-weight: 400;
     margin-bottom: 1px;
     text-transform: uppercase;
-	width: 100%;
+    width: 100%;
 }
 .live-chat p {
     color: #02858f;
@@ -577,8 +577,8 @@ a.orange_button span, div.button-search span{
     text-transform: uppercase;
     font-family:Arial;
     font-size:11px;
-	background-color: #95bd55;
-	margin-left: 15px;
+    background-color: #95bd55;
+    margin-left: 15px;
 }
 
 
@@ -590,24 +590,24 @@ span.orange_button input.button{
     font-weight: bold;
     height: 29px;
     line-height: 29px;
-	padding: 0 10px 2px;
-	border:none;
+    padding: 0 10px 2px;
+    border:none;
     cursor:pointer;
     font-family:Arial;
     text-transform: uppercase;
-	background: -webkit-linear-gradient(top, #689227 0%, #82ba2c 100%) #689227;
-	background: -moz-linear-gradient(top, #689227 0%, #82ba2c 100%) #689227;
-	background: -ms-linear-gradient(top, #689227 0%, #82ba2c 100%) #689227;
-	background: linear-gradient(to bottom, #689227 0%, #82ba2c 100%) #689227;
-	border-radius: 3px;
+    background: -webkit-linear-gradient(top, #689227 0%, #82ba2c 100%) #689227;
+    background: -moz-linear-gradient(top, #689227 0%, #82ba2c 100%) #689227;
+    background: -ms-linear-gradient(top, #689227 0%, #82ba2c 100%) #689227;
+    background: linear-gradient(to bottom, #689227 0%, #82ba2c 100%) #689227;
+    border-radius: 3px;
 }
 
 input#button-postal.button {
-	margin-left: -5px;
+    margin-left: -5px;
 }
 
 div.id_model {
-	width: 150px;
+    width: 150px;
 }
 
 
@@ -662,11 +662,11 @@ a.gray_button span{
     font-weight: bold;
 }
 .quick-access {
-	padding-right: 025px;
+    padding-right: 025px;
     padding-top: 3px;
     font-weight: bold;
     text-decoration: none;
-	float: right;
+    float: right;
 }
 #header .acount {
     color: #999999;
@@ -919,7 +919,7 @@ a.gray_button span{
     margin-top: 10px;
     float: left;
     width: 100%;
-	background-color: #028590;
+    background-color: #028590;
 
 }
 
@@ -1131,7 +1131,7 @@ a.gray_button span{
     color: #424141;
     margin-bottom: 25px;
     font-size: 11px;
-	margin-left: 25px;
+    margin-left: 25px;
 }
 .breadcrumb.bc_category{margin-bottom:45px}
 .breadcrumb a {
@@ -1145,10 +1145,10 @@ a.gray_button span{
 }
 .success, .warning, .attention, .information {
     margin-bottom: 15px;
-	margin-top: -11px;
-	padding: 10px 10px 10px 29px;
+    margin-top: -11px;
+    padding: 10px 10px 10px 29px;
     color:#df3a65;
-	margin-left: 25px;
+    margin-left: 25px;
 }
 
 
@@ -1187,12 +1187,12 @@ table.form {
     border-collapse: collapse;
     margin-bottom: 20px;
     width: 100%;
-	margin-left: 25px;
+    margin-left: 25px;
 }
 
 #content form.register table.form tbody tr td table tbody tr td h2{
-	margin-left: 0;
-	margin-top: 15px;
+    margin-left: 0;
+    margin-top: 15px;
 }
 
 table.form > * > * > td {
@@ -1305,9 +1305,9 @@ table.radio tr.highlight:hover td {
 }
 .buttons.wishlist_but{margin-bottom:53px}
 .buttons .left {
-	text-align: left;
-	margin: 0 0 0 10px;
-	float: left;
+    text-align: left;
+    margin: 0 0 0 10px;
+    float: left;
 }
 
 
@@ -1353,31 +1353,31 @@ h2 span, h2#review-title, h2.ta-related{font-family:"MyriadProBold"; font-size: 
 }
 
 div.newsletterbox {
-	float: left;
-	clear: left;
-	position: absolute;
-	bottom: 55px;
-	left: 800px;
+    float: left;
+    clear: left;
+    position: absolute;
+    bottom: 55px;
+    left: 800px;
 }
 
 #content div.newsletterbox div.box-heading {
-	font-weight: bold;
-	color: #95bd55;
-	margin-bottom: 10px;
-	text-transform: uppercase;
-	font-size: 13px;
+    font-weight: bold;
+    color: #95bd55;
+    margin-bottom: 10px;
+    text-transform: uppercase;
+    font-size: 13px;
 }
 
 #subscribe table tbody tr td a.button span {
-	background-color: #95bd55;
-	color: #ffffff;
-	padding: 5px;
-	margin-top: 10px;
-	float: left;
+    background-color: #95bd55;
+    color: #ffffff;
+    padding: 5px;
+    margin-top: 10px;
+    float: left;
 }
 
 .box {
-	margin-bottom: 20px;
+    margin-bottom: 20px;
 }
 .box .box-heading {
     font-family: "MyriadProBold";
@@ -1862,23 +1862,23 @@ form.edit_affiliate select{width:51.2%; }
     border: medium none;
     color: #ffffff;
     cursor: pointer;
-	font: 25px "MyriadProBold";
-	height: auto;
+    font: 25px "MyriadProBold";
+    height: auto;
     padding: 5px 20px 5px 45px;
     text-transform: uppercase;
     /*margin-bottom:10px;*/
-text-shadow: 0 0 1px;
-border-radius: 3px;
-	margin-left: -5px;
+    text-shadow: 0 0 1px;
+    border-radius: 3px;
+    margin-left: -5px;
 }
 
 
 
 #tab-related div.es-carousel ul.skin-opencart li div.boss-tab-related div.cart a.button, #content div.codespot-content.main-column-content div.product-list div.one-product-list div.right div.cart input.button, #content div.codespot-content.main-column-content div.product-grid div.one-product-list div.cart input.button {
-	font-size: 12px;
-	background-position: 5px;
-	padding: 5px 10px 5px 30px;
-	margin-left: 1px;
+    font-size: 12px;
+    background-position: 5px;
+    padding: 5px 10px 5px 30px;
+    margin-left: 1px;
 }
 
 
@@ -1887,10 +1887,10 @@ border-radius: 3px;
 }
 
 .cart a.button{
-	padding: 5px 0 5px 23px;
+    padding: 5px 0 5px 23px;
 }
 .cart input.button:hover{text-decoration:none;
-background-color: #95bd55;
+                         background-color: #95bd55;
 }
 .product-info {
     padding-bottom: 20px;
@@ -1930,7 +1930,7 @@ background-color: #95bd55;
     font-size: 18px; 
     font-weight:bold; 
     padding-bottom:17px;
-	color: #424141;
+    color: #424141;
 }
 
 .product-info .description {
@@ -1940,7 +1940,7 @@ background-color: #95bd55;
     line-height: 18px;
     margin-bottom: 10px;
     padding:16px 0 16px 0;
-	margin-top: 10px;
+    margin-top: 10px;
 }
 .product-info .description span {
     color: #868585;
@@ -2346,7 +2346,7 @@ background-color: #95bd55;
 .login-content .left {
     float: left;
     width: 48%;
-	margin-left: 25px;
+    margin-left: 25px;
 }
 .login-content .right {
     float: right;
@@ -2937,7 +2937,7 @@ div.footerwrap {
 }
 .banner div img {
     margin-bottom: 20px;
-	margin-top: 20px;
+    margin-top: 20px;
 }
 
 .boss-home-category-product{
@@ -3305,7 +3305,26 @@ div.tags {
 }
 
 #content form div.cart-info table tbody tr td.model div.remove a img {
-	float: left;
-	margin-left: 200px;
-	margin-top: -10px;
+    float: left;
+    margin-left: 200px;
+    margin-top: -10px;
+}
+
+/*Cart page setting*/
+#content .cart-module > div#coupon {
+    background-color: #028590;
+    
+} 
+#content .cart-module > div#coupon form>div{
+    float:left;
+}
+#content .cart-module > div#coupon form>div.label {
+    width:15%;
+    padding-left: 10px;
+    color:white;
+    font-weight: bold;
+    padding-top:10px;
+}
+#content .cart-module > div#coupon form>div.button {
+    margin-left: 10px;
 }
